# CoreBlur

./: CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  blur_ipc.cpp  blur_ipc_pinning.cpp  blur_opencv.cpp  main.cpp
src/: CMakeLists.txt
src/core_affinity/: CMakeLists.txt  ipc_manager.cpp  ipc_manager.h
src/gaussian_blur/: CMakeLists.txt  gaussian_blur.cpp  gaussian_blur.h
src/image_io/: CMakeLists.txt  image_io.cpp  image_io.h
src/ipc/: CMakeLists.txt  shm_manager.cpp  shm_manager.h
src/tile_manager/: CMakeLists.txt  tile_manager.cpp  tile_manager.h
