set(LIBRARY_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/ipc_manager.cpp")
set(LIBRARY_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/ipc_manager.h")
add_library(${CORE_AFFINITY_MANAGER_LIBRARY} STATIC ${LIBRARY_SOURCES} ${LIBRARY_HEADERS})

target_include_directories(${CORE_AFFINITY_MANAGER_LIBRARY} PUBLIC
        "${CMAKE_CURRENT_SOURCE_DIR}"
)

target_link_libraries(${CORE_AFFINITY_MANAGER_LIBRARY} PUBLIC ${TILE_MANAGER_LIBRARY})