set(LIBRARY_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/image_io.cpp")
set(LIBRARY_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/image_io.h")
add_library(${IMAGE_IO_LIBRARY} STATIC ${LIBRARY_SOURCES} ${LIBRARY_HEADERS})

target_include_directories(${IMAGE_IO_LIBRARY} PUBLIC
        "${CMAKE_CURRENT_SOURCE_DIR}"
        "${CMAKE_SOURCE_DIR}/external/stb"
)