set(LIBRARY_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/shm_manager.cpp")
set(LIBRARY_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/shm_manager.h")
add_library(${IPC_MANAGER_LIBRARY} STATIC ${LIBRARY_SOURCES} ${LIBRARY_HEADERS})

target_include_directories(${IPC_MANAGER_LIBRARY} PUBLIC
        "${CMAKE_CURRENT_SOURCE_DIR}"
)