set(LIBRARY_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/tile_manager.cpp")
set(LIBRARY_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/tile_manager.h")
add_library(${TILE_MANAGER_LIBRARY} STATIC ${LIBRARY_SOURCES} ${LIBRARY_HEADERS})

target_include_directories(${TILE_MANAGER_LIBRARY} PUBLIC
        "${CMAKE_CURRENT_SOURCE_DIR}"
)